--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bracket-builder",
+  "name": "brackapptology",
   "version": "1.0.0",
   "description": "Build your own bracketology",
   "engines": {
