--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "connect-session-sequelize": "^4.1.0",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
+    "heroku-postico": "0.0.6",
     "history": "^4.6.3",
     "material-ui": "^0.20.0",
     "morgan": "^1.8.1",
