--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "morgan": "^1.8.1",
     "node-cron": "^1.2.1",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
